--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <li><a href="./hobbies.html">Hobbies</a></li>
         <li><a href="./contact.html">Contact</a></li>
     </ul> 
-    <hr />   
+    <hr />
+    <footer>Copyright@2023</footer>   
 </body>
 </html>
