--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
         <li><a href="./contact.html">Contact</a></li>
     </ul> 
     <hr />
-    <footer>Copyright@2023</footer>   
+    <footer>@ 2023 Jagaro</footer>   
 </body>
 </html>
